Add pgbinary reader and splitter with text array support and use it for the names index rebuild command to avoid anyy csv use